[package]
name = "egui_nerdfonts"
description = "Nerdfonts icons for egui"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bernsteining/egui_nerdfonts"
repository = "https://github.com/bernsteining/egui_nerdfonts"
keywords = ["egui", "nerdfonts", "icons", "symbols", "font"]
categories = ["gui"]

[dependencies]
epaint = { version = "0.27.2", default-features = false }

[build-dependencies]
zip = { version = "0.6.6", features = ["deflate"], default-features = false }
ttf-parser = "0.20.0"
downloader = "0.2.7"

[dev-dependencies]
eframe = "0.27.2"

[[example]]
name = "rust_logo"
